<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">TITLE</string>
    <string name="release_date">RELEASED ON</string>
    <string name="rating">RATING</string>
    <string name="synopsis">SYNOPSIS</string>
</resources>
